Fixes so that it is more complete testing and passes out of the box

--- a/view/files/__root__/views/__name__View/__name__View.scss
+++ b/view/files/__root__/views/__name__View/__name__View.scss
@@ -3,5 +3,4 @@
 @import "~styles/patterns";
 
 .root {
-  background-color: $color_light_grey;
 }
